--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
   "dependencies": {
     "fetch-blob": "^4.0.0",
     "form-data-encoder": "^4.0.2",
-    "node-fetch": "^3.3.2",
-    "typedoc": "^0.28.7"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "@types/node-fetch": "^2.5.12",
     "tslib": "^2.7.0",
     "tsup": "^8.2.4",
+    "typedoc": "^0.28.17",
     "typedoc-plugin-missing-exports": "^4.1.0",
     "typescript": "5.8"
   }
